# nita-obel

./: .editorconfig  .gitignore  .release-plz.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  package-lock.json  package.json  rustfmt.toml  tarpaulin-report.html  typos.toml
crates/obel_app/: CHANGELOG.md  Cargo.toml
crates/obel_app/src/: lib.rs  main.rs
crates/obel_diagnostic/: CHANGELOG.md  Cargo.toml  README.md
crates/obel_diagnostic/src/: lib.rs
crates/obel_dylib/: CHANGELOG.md  Cargo.toml
crates/obel_dylib/src/: lib.rs
crates/obel_platform/: Cargo.toml  README.md
crates/obel_platform/src/: lib.rs  sync.rs
crates/obel_ptr/: Cargo.toml  README.md
crates/obel_ptr/src/: lib.rs
crates/obel_reflect/: Cargo.toml  README.md
crates/obel_reflect/examples/: reflect_docs.rs
crates/obel_reflect/src/: lib.rs
crates/obel_reflect/src/utils/: attrs.rs  label.rs  mod.rs
crates/obel_root/: CHANGELOG.md  Cargo.toml  README.md
crates/obel_root/src/: lib.rs
crates/obel_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/obel_utils/src/: conditionals.rs  drop_cb.rs  futures.rs  hashing.rs  lib.rs  object_safe.rs  once.rs  parallel_queue.rs  struct_default.rs  sync_cell.rs  sync_cell_unsafe.rs  time.rs  trace.rs
engine/api/: CHANGELOG.md  Cargo.toml  README.md
engine/api/src/: lib.rs
engine/asset/map/: CHANGELOG.md  Cargo.toml  README.md
engine/asset/map/src/: lib.rs
engine/core/diagnostic/: CHANGELOG.md  Cargo.toml  README.md
engine/core/diagnostic/src/: lib.rs
engine/core/ecs/: CHANGELOG.md  Cargo.toml  README.md
engine/core/ecs/macros/: Cargo.toml
engine/core/ecs/macros/src/: bundle.rs  cmpt.rs  event.rs  from_world.rs  label.rs  lib.rs  param.rs  resource.rs
engine/core/ecs/macros/src/cmpt/: attr.rs  mod.rs  relationship.rs  require.rs
engine/core/ecs/macros/src/query/: cmpt.rs  filter.rs  mod.rs  state.rs  visit.rs  world.rs
engine/core/ecs/src/: checked_unwrap.rs  lib.rs  resource.rs
engine/core/ecs/src/error/: err.rs  handler.rs  mod.rs
engine/core/ecs/src/storage/: blob_array.rs  blob_vec.rs  mod.rs  thin_arr.rs
engine/core/reflect/: CHANGELOG.md  Cargo.toml  README.md
engine/core/reflect/compile_ui_test/: Cargo.toml  README.md
engine/core/reflect/compile_ui_test/src/: lib.rs
engine/core/reflect/compile_ui_test/tests/: derive.rs  func.rs  remote.rs
engine/core/reflect/compile_ui_test/tests/into_function/: arguments_fail.rs  closure_fail.rs  return_fail.rs
engine/core/reflect/compile_ui_test/tests/reflect_derive/: bounds_pass.rs  custom_where_fail.rs  custom_where_pass.rs  from_reflect_fail.rs  from_reflect_pass.rs  generics_fail.rs  generics_fail.stderr  generics_structs_pass.rs  lifetimes_pass.rs  nested_pass.rs
engine/core/reflect/compile_ui_test/tests/reflect_remote/: incorrect_wrapper_fail.rs  incorrect_wrapper_pass.rs  invalid_definition_fail.rs  invalid_definition_pass.rs  macro_order_fail.rs  macro_order_pass.rs  nested_fail.rs  nested_pass.rs  type_mismatch_fail.rs  type_mismatch_pass.rs
engine/core/reflect/derive/: CHANGELOG.md  Cargo.toml  README.md
engine/core/reflect/derive/compile_ui_test/: Cargo.toml
engine/core/reflect/derive/compile_ui_test/src/: lib.rs
engine/core/reflect/derive/src/: container_attributes.rs  custom_attributes.rs  derive_data.rs  documentation.rs  enum_utility.rs  field_attributes.rs  from_reflect.rs  generics.rs  ident.rs  lib.rs  meta.rs  reflect_opaque.rs  registration.rs  remote.rs  result_sifter.rs  serialization.rs  string_expr.rs  struct_utility.rs  trait_reflection.rs  traits.rs  where_clause_options.rs
engine/core/reflect/derive/src/attr/: container.rs  mod.rs  (+3 more)
engine/core/reflect/examples/: reflect_docs.rs
engine/core/reflect/src/: array.rs  attributes.rs  error.rs  fields.rs  from_reflect.rs  generics.rs  kind.rs  lib.rs  list.rs  map.rs  reflect.rs  reflectable.rs  remote.rs  set.rs  struct_trait.rs  tuple.rs  tuple_struct.rs  type_info.rs  type_info_stack.rs  type_path.rs  type_registry.rs  utility.rs
engine/core/reflect/src/derive/: mod.rs
engine/core/reflect/src/enums/: dynamic_enum.rs  enum_trait.rs  helpers.rs  mod.rs  variants.rs
engine/core/reflect/src/func/: dynamic_function.rs  dynamic_function_internal.rs  dynamic_function_mut.rs  error.rs  function.rs  info.rs  into_function_mut.rs  mod.rs  reflect_fn.rs  reflect_fn_mut.rs  registry.rs  signature.rs
engine/core/reflect/src/impls/: glam.rs  petgraph.rs  smallvec.rs  smol_str.rs  std.rs  uuid.rs  wgpu_types.rs
engine/core/reflect/src/path/: access.rs  error.rs  mod.rs  parse.rs
engine/core/reflect/src/serde/: mod.rs  type_data.rs
engine/core/reflect/src/utils/: attrs.rs  label.rs  manifest.rs  mod.rs  symbol.rs
engine/core/reflect/utils/: CHANGELOG.md  Cargo.toml  README.md
engine/core/reflect/utils/src/: attrs.rs  fq.rs  label.rs  lib.rs  manifest.rs  shape.rs
engine/core/statechart/: CHANGELOG.md  Cargo.toml  README.md
engine/core/tasks/: Cargo.toml  README.md
engine/core/tasks/src/: edge_executor.rs  futures.rs  lib.rs  mt_task_pool.rs  st_task_pool.rs  task_pool_macro.rs  thread_executor.rs  wasm_task.rs
engine/core/tasks/src/parallel/: adaptor.rs  iter.rs  mod.rs  slice.rs
engine/editor/: CHANGELOG.md  Cargo.toml  README.md
engine/feat/obel_physics/: CHANGELOG.md  Cargo.toml
engine/feat/physics/: Cargo.toml  README.md
engine/feat/scene/: CHANGELOG.md  Cargo.toml  README.md
engine/feat/scene/src/: lib.rs
engine/platform/: CHANGELOG.md  Cargo.toml  README.md
engine/platform/src/: borrow.rs  boxed.rs  hash.rs  lib.rs  string.rs  time.rs  vec.rs
engine/platform/src/collections/: hashbrown.rs  mod.rs
engine/platform/src/sync/: barrier.rs  mod.rs  once.rs  poison.rs  runonce.rs
engine/platform/src/utils/: default.rs  dropcb.rs  mod.rs  ptr.md  ptr.rs  synccell.rs
engine/samplecrate/: Cargo.toml
templates/samplecrate/: Cargo.toml  README.md
templates/samplecrate/src/: lib.rs
tools/ui_test_runner/: CHANGELOG.md  Cargo.toml  README.md
tools/ui_test_runner/src/: lib.rs
tools/ui_test_runner/tests/: example.rs
(+134 files in other folders)
