[package]
name = "obel_diagnostic"
version = "0.0.0"
description = "Provides diagnostic functionality"
keywords = ["obel", "obel_diagnostic"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[features]
# Disables diagnostics that are unsupported when obel is dynamically linked
dynamic_linking = []
sysinfo_plugin = ["dep:sysinfo"]

[dependencies]
obel_utils = { workspace = true }
const-fnv1a-hash = { workspace = true }

# macOS
[target.'cfg(all(target_os="macos"))'.dependencies]
# Some features of sysinfo are not supported by apple. This will disable those features on apple devices
sysinfo = { version = "0.32.0", optional = true, default-features = false, features = [
    "apple-app-store",
    "system",
] }

# Only include when on linux/windows/android/freebsd
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "android", target_os = "freebsd"))'.dependencies]
sysinfo = { version = "0.32.0", optional = true, default-features = false, features = [
    "system",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true
