[package]
name = "obel_utils"
version = "0.0.1"
description = "A collection of utils"
keywords = ["obel", "obel_app"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[features]
default = ["std", "serde"]
std = ["alloc", "tracing/std", "foldhash/std", "dep:thread_local"]
alloc = ["hashbrown"]
detailed_trace = []
serde = ["hashbrown/serde"]

[dependencies]
foldhash = { workspace = true }
tracing = { workspace = true }
hashbrown = { version = "0.15.1", features = [
  "equivalent",
  "raw-entry",
], optional = true, default-features = false }
thread_local = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true
