[package]
name = "obel_utils"
version = "0.0.0"
description = "A collection of utils"
keywords = ["obel", "obel_app"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[features]
default = ["std", "serde"]
## Adds serialization support through `serde`.
serde = ["hashbrown/serde"]
# Platform Compatibility
## Allows access to the `std` crate. Enabling this feature will prevent compilation
## on `no_std` targets, but provides access to certain additional features on
## supported platforms.
std = ["alloc", "obel_platform/std", "foldhash/std", "dep:thread_local"]
## Allows access to the `alloc` crate.
alloc = ["obel_platform/alloc", "dep:hashbrown"]
generic = ["critical-section", "portable-atomic"]
## `critical-section` provides the building blocks for synchronization primitives
## on all platforms, including `no_std`.
critical-section = ["obel_platform/critical-section"]
## `portable-atomic` provides additional platform support for atomic types and
## operations, even on targets without native support.
portable-atomic = ["obel_platform/portable-atomic"]

[dev-dependencies]
static_assertions = { workspace = true }

[dependencies]
obel_platform = { workspace = true }
foldhash = { workspace = true }
thread_local = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true, features = [
  "equivalent",
  "raw-entry",
] }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true
