[package]
name = "obel_api"
version = "0.0.7"
description = "facilitate optional dynamic linking via the 'dynamic_linking' feature..."
keywords = ["obel", "obel_api"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[features]
default = ["portable-atomic"]
portable-atomic = []
# Used to disable code that is unsupported when obel is dynamically linked
dynamic_linking = ["obel_diagnostic/dynamic_linking"]

[dependencies]
obel_platform = { workspace = true }
obel_diagnostic = { workspace = true }
obel_reflect = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true
