[package]
name = "[replace me]"
description = "[replace me]"
keywords = ["obel", "[replace me]"]
version = "0.0.5"
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true
[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[dev-dependencies]
static_assertions = { workspace = true }

[features]
default = []
