[badges]
maintenance = { status = "actively-developed" }
[lints]
workspace = true
[package.metadata.docs.rs]
workspace = true

[package]
name = "obel_ui_test_runner"
version = "0.0.7"
description = "provide ui test runner function to ease compile tests"
keywords = ["obel", "obel_ui_test_runner"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = "README.md"

[dependencies]
ui_test = "0.23.0"

[[test]]
name = "example"
harness = false
