[package]
name = "obel_diagnostic"
version = "0.0.3"
description = "Provides diagnostic functionality"
keywords = ["obel", "obel_diagnostic"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[features]
# Disables diagnostics that are unsupported when obel is dynamically linked
dynamic_linking = []
sysinfo_plugin = ["dep:sysinfo"]

## Allows access to the `std` crate. Enabling this feature will prevent compilation
## on `no_std` targets, but provides access to certain additional features on
## supported platforms.
std = ["obel_platform/std"]

[dependencies]
obel_platform = { workspace = true, features = ["alloc"] }
const-fnv1a-hash = { workspace = true }

# macOS
[target.'cfg(all(target_os="macos"))'.dependencies]
# Some features of sysinfo are not supported by apple. This will disable those features on apple devices
sysinfo = { workspace = true, optional = true, features = [
  "apple-app-store",
  "system",
] }

# Only include when on linux/windows/android/freebsd
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "android", target_os = "freebsd"))'.dependencies]
sysinfo = { workspace = true, optional = true, features = ["system"] }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true
