[package]
name = "obel_statechart"
version = "0.0.5"
description = "Provides statechart plugin to implement complex game logics eg, behavior tree"
keywords = ["obel", "obel_engine", "obel_statechart"]
categories = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[dependencies]

[dev-dependencies]
static_assertions = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
workspace = true

[badges]
maintenance = { status = "actively-developed" }
